Update configuration and console.py

--- a/config.json
+++ b/config.json
@@ -1,13 +1,14 @@
 {
-    "model_name": "gpt-3.5-turbo",
+    "model_name": "gpt-3.5-turbo-1106", 
     "api_key": "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",
     "decompose_function": "dynamic_decomposition",
     "num_candidates": 5,
     "max_depth": 5,
     "breadth_limit": 5,
     "value_threshold": 0.5,
+    "num_responses": 3,
     "decomposition_steps": [
-        "Étape 1: Analyser le problème.",
+        "Étapexite 1: Analyser le problème.",
         "Étape 2: Diviser en sous-problèmes.",
         "Étape 3: Résoudre chaque sous-problème."
     ],
