Update config.json and console.py

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 __pycache__/*
 
+.vs/*
+.vs/slnx.sqlite
+.vs/AI-TreeOfThought/copilot-chat/9f4c389a/sessions/a2212359-bd5a-40a7-ac5c-a1b3e94067bb
+.vs/AI-TreeOfThought/FileContentIndex/2fcbee74-b9f5-42fe-b57f-1b354d20c079.vsidx
+.vs/AI-TreeOfThought/FileContentIndex/95b6fe4b-f67f-45cb-a6df-9aa35a8dd6db.vsidx
+.vs/AI-TreeOfThought/FileContentIndex/570c6bbc-e428-4b89-91cf-ef792453f42f.vsidx
+.vs/AI-TreeOfThought/FileContentIndex/c9ebc61d-239a-4566-93a3-ade15c9bd6f4.vsidx
+.vs/AI-TreeOfThought/FileContentIndex/fc1a3bb2-8f87-4603-9bfe-ec5454a3dd23.vsidx
+.vs/AI-TreeOfThought/v17/.wsuo
+__pycache__/*
+__pycache__/interactive.cpython-312.pyc
+__pycache__/tree.cpython-312.pyc
+__pycache__/interactive.cpython-312.pyc
+__pycache__/tree.cpython-312.pyc
