The most significant changes include the update of the AI model in `aiconfig.json`, the modification of the `SupervisorAgent` class in `agent.py`, and the changes to the `InteractiveTreeOfThought` and `TreeOfThought` classes in `interactive.py` and `tree.py` respectively. The removal of the `utils.py` file also indicates a significant restructuring of the codebase.
1. The AI model was updated from `gpt-3.5-turbo-1106` to `gpt-4o` in `aiconfig.json`. This change suggests an upgrade to a newer, potentially more powerful AI model (aiconfig.json).

2. In `agent.py`, the `SupervisorAgent` class was modified. The prompt message and the response format were changed, and the `best_thought` variable was replaced with `response` in the activity dictionary and the return statement. This change likely affects how the agent interacts with the user and processes responses (agent.py).

3. The `InteractiveTreeOfThought` class in `interactive.py` was updated. Changes were made to the command prompt and the way thoughts are generated and evaluated. This could affect the user interface and the thought process of the AI (interactive.py).

4. The `TreeOfThought` class in `tree.py` was updated to use the configuration file for problem decomposition and thought evaluation. The `evaluate_states` method was removed, suggesting a change in the way the AI evaluates different states or possibilities (tree.py).

5. The `utils.py` file was completely removed. This indicates a significant restructuring, as all functions in this file were either moved to other files or deemed unnecessary (utils.py).

6. The `launch.json` file was updated to change the problem argument in the Python launch configuration. This could affect how the program is launched or what arguments it accepts (launch.json).

7. The `config.json` file was updated to add more detailed steps for problem decomposition and to add a new parameter `num_agents`. This could affect how problems are broken down and solved, and how many agen

--- a/config.json
+++ b/config.json
@@ -1,18 +1,22 @@
 {
-    "decompose_function": "dynamic_decomposition",
-    "num_candidates": 5,
-    "max_depth": 5,
-    "breadth_limit": 5,
-    "value_threshold": 0.5,
-    "num_responses": 3,
-    "decomposition_steps": [
-        "Étape 1: Analyser le problème.",
-        "Étape 2: Diviser en sous-problèmes.",
-        "Étape 3: Résoudre chaque sous-problème."
-    ],
-    "api_urls": {
-        "primary": "https://api.example.com/decompose",
-        "secondary": "https://api.alternate.com/decompose"
-    }
+  "decompose_function": "dynamic_decomposition",
+  "num_candidates": 5,
+  "max_depth": 5,
+  "breadth_limit": 5,
+  "value_threshold": 0.5,
+  "num_responses": 3,
+  "num_agents": 3,
+  "decomposition_steps": [
+    "Étape 1: Analyser le problème : comprendre la demande initiale en clarifiant la question ou le problème posé, identifier les objectifs et les contraintes spécifiques, collecter toutes les informations nécessaires, y compris les contextes historiques, les exemples pertinents et les informations de base nécessaires pour comprendre le problème, et établir les critères de succès pour la solution, y compris les exigences de précision, de temps de réponse et de pertinence des résultats.",
+    
+    "Étape 2: Diviser en sous-problèmes : identifier les composantes principales du problème en le décomposant en ses éléments constitutifs, organiser les sous-problèmes de manière logique et séquentielle en identifiant les dépendances et les relations entre eux, et déterminer l'ordre dans lequel les sous-problèmes doivent être abordés en fonction de leur complexité et de leur impact sur la solution globale.",
+    
+    "Étape 3: Résoudre chaque sous-problème : choisir les techniques appropriées en sélectionnant les algorithmes, modèles ou méthodes les plus adaptés pour résoudre chaque sous-problème, développer et tester des solutions pour chaque sous-problème en les testant de manière isolée pour s'assurer de leur validité et de leur efficacité, et intégrer les solutions des sous-problèmes de manière cohérente et synergique en veillant à ce que l'intégration soit fluide et que les sous-solutions fonctionnent bien ensemble.",
+    
+    "Étape 4: Fournir le résultat : assembler le résultat final en combinant les sorties des différentes sous-solutions pour former une réponse complète et cohérente au problème initial, vérifier la solution en effectuant une vérification approfondie pour s'assurer qu'elle est correcte, pertinente et qu'elle répond bien aux critères de succès définis, et présenter la solution en la formatant de manière claire et compréhensible en utilisant des visualisations, des résumés ou des rapports détaillés selon les besoins de l'utilisateur final."
+  ],
+  "api_urls": {
+      "primary": "https://api.example.com/decompose",
+      "secondary": "https://api.alternate.com/decompose"
   }
-  
+}
