--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["--config", "config.json", "--problem", "Rédige moi un prompt pour ChatGPT, ce prompt permet au LLM de générer un générateur de prompt. Ce générateur de prompt doit être capable de générer des prompts de facon autonome en incluant des commandes utilisateur tel un logiciel."]
+            "args": ["--config", "config.json", "--problem", "somme de 1 + 1"]
         }
     ]
 }
