--- a/aiconfig.json
+++ b/aiconfig.json
@@ -1,7 +1,7 @@
 {
     "config_list": [
         {
-           "model": "gpt-4o",
+           "model": "gpt-3.5-turbo-1106",
             "api_key": "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"
         }
     ],
