The most significant changes in the code include the translation of the code from French to English, the removal of the code for exporting the tree of thoughts to JSON and image formats from the `exporters.py` file, and the update of several methods in the `InteractiveTreeOfThought` and `TreeOfThought` classes. Additionally, the API key in the `aiconfig.json` file has been changed, and the `config.json` and `launch.json` files have been updated to include new fields and changes in the `args` field respectively. Lastly, new JSON objects have been added to the `final_result.json` and `result_20240601-172509.json` files.
Here is a list of the changes:

1. The code has been translated from French to English, making it more accessible to a wider audience.
2. The code for exporting the tree of thoughts to JSON and image formats has been removed from the `exporters.py` file.
3. The `evaluate_states` method in the `InteractiveTreeOfThought` class has been commented out.
4. The `save_result` method in the `InteractiveTreeOfThought` class now includes a timestamp in the filename.
5. The `generate_final_result` method in the `InteractiveTreeOfThought` class now uses English strings.
6. The `evaluate_thoughts_with_agents` method in the `TreeOfThought` class now returns a dictionary containing information about the thought and the agent.
7. The API key in the `aiconfig.json` file has been changed.
8. The `config.json` file now includes a `filename_result` field and an `api_urls` field.
9. The `args` field in the `launch.json`, `agent.py`, and `console.py` files has been updated.
10. New JSON objects have been added to the `final_result.json` and `result_20240601-172509.json` files, containing information about the best thought and its justification, a history of thoughts, and steps taken to solve a problem.

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,5 @@ __pycache__/tree.cpython-312.pyc
 /interactive_tree_of_thought.log
 __pycache__/interactive.cpython-312.pyc
 __pycache__/tree.cpython-312.pyc
+/result_20240601-172509.json
+/final_result.json
