--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal",
-            "args": ["--config", "config.json", "--problem", "The sum of 1 + 1."]
+            "args": ["--config", "config.json", "--problem", "Invente moi un code python qui fait un truc cool et imaginatif."]
         }
     ]
 }
